# fkrig

./: CMakeLists.txt  Doxyfile  README.md
include/: covariance.hpp  curve.hpp  curve_base.hpp  curve_link.hpp  ego.hpp  ego_base.hpp  ego_curve.hpp  ego_surface.hpp  surface.hpp  surface_base.hpp  surface_link.hpp  util_fkrig.hpp
src/: covariance.cpp  curve.cpp  curve_base.cpp  curve_link.cpp  ego_base.cpp  ego_curve.cpp  ego_surface.cpp  surface.cpp  surface_base.cpp  surface_link.cpp  util_fkrig.cpp
